--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "node-sass": "^5.0.0",
     "pixi-sound": "^3.0.5",
     "pixi.js": "^5.3.3",
     "pixi.js-keyboard": "^1.0.9",
@@ -19,6 +18,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "sass": "^1.45.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
