--- a/package.json
+++ b/package.json
@@ -1,49 +1,18 @@
 {
-  "name": "sokoban.ts",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@koreez/pixi-stats": "^1.0.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "pixi-sound": "^3.0.5",
-    "pixi.js": "^5.3.3",
-    "pixi.js-keyboard": "^1.0.9",
-    "pixi.js-mouse": "^1.0.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "sass": "^1.45.0",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "sokoban.ts",
+    "version": "0.1.0",
+    "dependencies": {
+        "@koreez/pixi-stats": "^1.0.0",
+        "parcel": "^2.0.1",
+        "pixi-sound": "^3.0.5",
+        "pixi.js": "^5.3.3",
+        "pixi.js-keyboard": "^1.0.9",
+        "pixi.js-mouse": "^1.0.4",
+        "sass": "^1.45.0"
+    },
+    "scripts": {
+        "clean": "rm -rf ./dist/",
+        "start": "parcel ./src/index.html",
+        "build": "npm run clean && parcel build --no-source-maps ./src/index.html"
+    }
 }
