--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     },
     "scripts": {
         "clean": "rm -rf ./dist/",
-        "start": "parcel ./src/index.html",
+        "start": "npm run clean && parcel ./src/index.html",
         "build": "npm run clean && parcel build --no-source-maps ./src/index.html"
     }
 }
